--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
+    "formik": "^2.4.3",
+    "jsonwebtoken": "^9.0.1",
     "next": "13.4.1",
+    "nodemailer": "^6.9.4",
+    "openai": "^3.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-hot-toast": "^2.4.1",
+    "tailwindcss": "3.3.2",
+    "yup": "^1.2.0"
   }
 }
